[gd_scene load_steps=2 format=3 uid="uid://dx4j2vypsxfu"]

[ext_resource type="Script" uid="uid://u5oulvova26x" path="res://ui/campaign_studio/Scenes.gd" id="1_gv5bp"]

[node name="Scenes" type="HSplitContainer"]
script = ExtResource("1_gv5bp")
metadata/_tab_index = 1

[node name="SceneList" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="ListHeader" type="HBoxContainer" parent="SceneList"]
layout_mode = 2

[node name="Title" type="Label" parent="SceneList/ListHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Scenes"

[node name="AddSceneBtn" type="Button" parent="SceneList/ListHeader"]
layout_mode = 2
tooltip_text = "Add new scene"
text = "+"

[node name="SearchBox" type="LineEdit" parent="SceneList"]
layout_mode = 2
placeholder_text = "Search scenes..."

[node name="SceneItemList" type="ItemList" parent="SceneList"]
layout_mode = 2
size_flags_vertical = 3

[node name="SceneEditor" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="EditorContent" type="VBoxContainer" parent="SceneEditor"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="NoSelectionLabel" type="Label" parent="SceneEditor/EditorContent"]
layout_mode = 2
text = "Select a scene to edit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EditorPanel" type="VBoxContainer" parent="SceneEditor/EditorContent"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="SceneHeader" type="HBoxContainer" parent="SceneEditor/EditorContent/EditorPanel"]
layout_mode = 2

[node name="SceneTitle" type="Label" parent="SceneEditor/EditorContent/EditorPanel/SceneHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Scene Editor"

[node name="DeleteSceneBtn" type="Button" parent="SceneEditor/EditorContent/EditorPanel/SceneHeader"]
layout_mode = 2
text = "ðŸ—‘ Delete Scene"

[node name="SceneIdSection" type="VBoxContainer" parent="SceneEditor/EditorContent/EditorPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="SceneEditor/EditorContent/EditorPanel/SceneIdSection"]
layout_mode = 2
text = "Scene ID"

[node name="SceneIdField" type="LineEdit" parent="SceneEditor/EditorContent/EditorPanel/SceneIdSection"]
layout_mode = 2
placeholder_text = "unique_scene_id"

[node name="DescSection" type="VBoxContainer" parent="SceneEditor/EditorContent/EditorPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="SceneEditor/EditorContent/EditorPanel/DescSection"]
layout_mode = 2
text = "Description"

[node name="DescField" type="TextEdit" parent="SceneEditor/EditorContent/EditorPanel/DescSection"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "Describe the scene for the narrator..."

[node name="ImageSection" type="VBoxContainer" parent="SceneEditor/EditorContent/EditorPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="SceneEditor/EditorContent/EditorPanel/ImageSection"]
layout_mode = 2
text = "Scene Image"

[node name="ImageRow" type="HBoxContainer" parent="SceneEditor/EditorContent/EditorPanel/ImageSection"]
layout_mode = 2

[node name="SceneImagePreview" type="TextureRect" parent="SceneEditor/EditorContent/EditorPanel/ImageSection/ImageRow"]
layout_mode = 2
custom_minimum_size = Vector2(160, 90)
stretch_mode = 5

[node name="ImageButtons" type="VBoxContainer" parent="SceneEditor/EditorContent/EditorPanel/ImageSection/ImageRow"]
layout_mode = 2

[node name="SetImageBtn" type="Button" parent="SceneEditor/EditorContent/EditorPanel/ImageSection/ImageRow/ImageButtons"]
layout_mode = 2
text = "Set Image"

[node name="ClearImageBtn" type="Button" parent="SceneEditor/EditorContent/EditorPanel/ImageSection/ImageRow/ImageButtons"]
layout_mode = 2
text = "Clear Image"

[node name="RulesSection" type="VBoxContainer" parent="SceneEditor/EditorContent/EditorPanel"]
layout_mode = 2

[node name="RulesHeader" type="HBoxContainer" parent="SceneEditor/EditorContent/EditorPanel/RulesSection"]
layout_mode = 2

[node name="Label" type="Label" parent="SceneEditor/EditorContent/EditorPanel/RulesSection/RulesHeader"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rules (JSON)"

[node name="RulesField" type="TextEdit" parent="SceneEditor/EditorContent/EditorPanel/RulesSection"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
placeholder_text = "{\"combat_allowed\": false}"

[node name="HSeparator" type="HSeparator" parent="SceneEditor/EditorContent/EditorPanel"]
layout_mode = 2

[node name="EntitiesSection" type="VBoxContainer" parent="SceneEditor/EditorContent/EditorPanel"]
layout_mode = 2

[node name="EntitiesHeader" type="HBoxContainer" parent="SceneEditor/EditorContent/EditorPanel/EntitiesSection"]
layout_mode = 2

[node name="Label" type="Label" parent="SceneEditor/EditorContent/EditorPanel/EntitiesSection/EntitiesHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Entities"

[node name="AddEntityBtn" type="Button" parent="SceneEditor/EditorContent/EditorPanel/EntitiesSection/EntitiesHeader"]
layout_mode = 2
text = "+ Add Entity"

[node name="ExitWizardBtn" type="Button" parent="SceneEditor/EditorContent/EditorPanel/EntitiesSection/EntitiesHeader"]
layout_mode = 2
text = "ðŸšª Exit Wizard"

[node name="EntitiesList" type="VBoxContainer" parent="SceneEditor/EditorContent/EditorPanel/EntitiesSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SaveSection" type="HBoxContainer" parent="SceneEditor/EditorContent/EditorPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SaveSceneBtn" type="Button" parent="SceneEditor/EditorContent/EditorPanel/SaveSection"]
layout_mode = 2
text = "ðŸ’¾ Save Scene"

[node name="RevertBtn" type="Button" parent="SceneEditor/EditorContent/EditorPanel/SaveSection"]
layout_mode = 2
text = "â†¶ Revert Changes"

[node name="StatusLabel" type="Label" parent="SceneEditor/EditorContent/EditorPanel/SaveSection"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="SceneImageFileDialog" type="FileDialog" parent="."]
title = "Select Scene Image"
file_mode = 0
access = 2
filters = PackedStringArray("*.png ; PNG Images", "*.jpg, *.jpeg ; JPEG Images", "*.webp ; WebP Images", "*.bmp ; BMP Images", "*.tga ; TGA Images", "*.* ; All Files")

[node name="EntityEditorDialog" type="Window" parent="."]
title = "Edit Entity"
initial_position = 1
size = Vector2i(500, 600)
visible = false

[node name="EntityEditorContent" type="MarginContainer" parent="EntityEditorDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="EntityEditorDialog/EntityEditorContent"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="EntityIdSection" type="VBoxContainer" parent="EntityEditorDialog/EntityEditorContent/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="EntityEditorDialog/EntityEditorContent/VBox/EntityIdSection"]
layout_mode = 2
text = "Entity ID"

[node name="EntityIdField" type="LineEdit" parent="EntityEditorDialog/EntityEditorContent/VBox/EntityIdSection"]
layout_mode = 2
placeholder_text = "entity_id"

[node name="TypeSection" type="VBoxContainer" parent="EntityEditorDialog/EntityEditorContent/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="EntityEditorDialog/EntityEditorContent/VBox/TypeSection"]
layout_mode = 2
text = "Type"

[node name="TypeField" type="LineEdit" parent="EntityEditorDialog/EntityEditorContent/VBox/TypeSection"]
layout_mode = 2
placeholder_text = "npc, item, exit, etc."

[node name="VerbsSection" type="VBoxContainer" parent="EntityEditorDialog/EntityEditorContent/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="EntityEditorDialog/EntityEditorContent/VBox/VerbsSection"]
layout_mode = 2
text = "Verbs (comma-separated)"

[node name="VerbsField" type="LineEdit" parent="EntityEditorDialog/EntityEditorContent/VBox/VerbsSection"]
layout_mode = 2
placeholder_text = "talk, examine, take"

[node name="TagsSection" type="VBoxContainer" parent="EntityEditorDialog/EntityEditorContent/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="EntityEditorDialog/EntityEditorContent/VBox/TagsSection"]
layout_mode = 2
text = "Tags (comma-separated)"

[node name="TagsField" type="LineEdit" parent="EntityEditorDialog/EntityEditorContent/VBox/TagsSection"]
layout_mode = 2
placeholder_text = "human, companion, etc."

[node name="PropsSection" type="VBoxContainer" parent="EntityEditorDialog/EntityEditorContent/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="EntityEditorDialog/EntityEditorContent/VBox/PropsSection"]
layout_mode = 2
text = "Properties (JSON)"

[node name="PropsField" type="TextEdit" parent="EntityEditorDialog/EntityEditorContent/VBox/PropsSection"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "{\"description\": \"...\", \"leads\": \"scene_id\"}"

[node name="ButtonSection" type="HBoxContainer" parent="EntityEditorDialog/EntityEditorContent/VBox"]
layout_mode = 2
alignment = 2

[node name="CancelBtn" type="Button" parent="EntityEditorDialog/EntityEditorContent/VBox/ButtonSection"]
layout_mode = 2
text = "Cancel"

[node name="SaveBtn" type="Button" parent="EntityEditorDialog/EntityEditorContent/VBox/ButtonSection"]
layout_mode = 2
text = "Save Entity"

[node name="ExitWizardDialog" type="Window" parent="."]
title = "Exit Wizard"
initial_position = 1
size = Vector2i(450, 400)
visible = false

[node name="WizardContent" type="MarginContainer" parent="ExitWizardDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ExitWizardDialog/WizardContent"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="InfoLabel" type="Label" parent="ExitWizardDialog/WizardContent/VBox"]
layout_mode = 2
text = "Create an exit entity that connects to another scene."
autowrap_mode = 3

[node name="ExitIdSection" type="VBoxContainer" parent="ExitWizardDialog/WizardContent/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="ExitWizardDialog/WizardContent/VBox/ExitIdSection"]
layout_mode = 2
text = "Exit ID"

[node name="ExitIdField" type="LineEdit" parent="ExitWizardDialog/WizardContent/VBox/ExitIdSection"]
layout_mode = 2
placeholder_text = "door_north"

[node name="LabelSection" type="VBoxContainer" parent="ExitWizardDialog/WizardContent/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="ExitWizardDialog/WizardContent/VBox/LabelSection"]
layout_mode = 2
text = "Display Label (for Travel UI)"

[node name="LabelField" type="LineEdit" parent="ExitWizardDialog/WizardContent/VBox/LabelSection"]
layout_mode = 2
placeholder_text = "North Door"

[node name="DescSection" type="VBoxContainer" parent="ExitWizardDialog/WizardContent/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="ExitWizardDialog/WizardContent/VBox/DescSection"]
layout_mode = 2
text = "Description"

[node name="DescField" type="TextEdit" parent="ExitWizardDialog/WizardContent/VBox/DescSection"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "A wooden door leading north..."

[node name="LeadsToSection" type="VBoxContainer" parent="ExitWizardDialog/WizardContent/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="ExitWizardDialog/WizardContent/VBox/LeadsToSection"]
layout_mode = 2
text = "Leads To (scene_id)"

[node name="LeadsToField" type="LineEdit" parent="ExitWizardDialog/WizardContent/VBox/LeadsToSection"]
layout_mode = 2
placeholder_text = "target_scene_id"

[node name="ButtonSection" type="HBoxContainer" parent="ExitWizardDialog/WizardContent/VBox"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="CancelBtn" type="Button" parent="ExitWizardDialog/WizardContent/VBox/ButtonSection"]
layout_mode = 2
text = "Cancel"

[node name="CreateBtn" type="Button" parent="ExitWizardDialog/WizardContent/VBox/ButtonSection"]
layout_mode = 2
text = "Create Exit"

[connection signal="pressed" from="SceneList/ListHeader/AddSceneBtn" to="." method="_on_add_scene_pressed"]
[connection signal="text_changed" from="SceneList/SearchBox" to="." method="_on_search_scenes"]
[connection signal="item_selected" from="SceneList/SceneItemList" to="." method="_on_scene_selected"]
[connection signal="pressed" from="SceneEditor/EditorContent/EditorPanel/SceneHeader/DeleteSceneBtn" to="." method="_on_delete_scene_pressed"]
[connection signal="pressed" from="SceneEditor/EditorContent/EditorPanel/EntitiesSection/EntitiesHeader/AddEntityBtn" to="." method="_on_add_entity_pressed"]
[connection signal="pressed" from="SceneEditor/EditorContent/EditorPanel/EntitiesSection/EntitiesHeader/ExitWizardBtn" to="." method="_on_exit_wizard_pressed"]
[connection signal="pressed" from="SceneEditor/EditorContent/EditorPanel/SaveSection/SaveSceneBtn" to="." method="_on_save_scene_pressed"]
[connection signal="pressed" from="SceneEditor/EditorContent/EditorPanel/SaveSection/RevertBtn" to="." method="_on_revert_scene_pressed"]
[connection signal="pressed" from="SceneEditor/EditorContent/EditorPanel/ImageSection/ImageRow/ImageButtons/SetImageBtn" to="." method="_on_set_scene_image_pressed"]
[connection signal="pressed" from="SceneEditor/EditorContent/EditorPanel/ImageSection/ImageRow/ImageButtons/ClearImageBtn" to="." method="_on_clear_scene_image_pressed"]
[connection signal="file_selected" from="SceneImageFileDialog" to="." method="_on_scene_image_file_selected"]
[connection signal="close_requested" from="EntityEditorDialog" to="." method="_on_entity_editor_close"]
[connection signal="pressed" from="EntityEditorDialog/EntityEditorContent/VBox/ButtonSection/CancelBtn" to="." method="_on_entity_editor_close"]
[connection signal="pressed" from="EntityEditorDialog/EntityEditorContent/VBox/ButtonSection/SaveBtn" to="." method="_on_entity_save_pressed"]
[connection signal="close_requested" from="ExitWizardDialog" to="." method="_on_exit_wizard_close"]
[connection signal="pressed" from="ExitWizardDialog/WizardContent/VBox/ButtonSection/CancelBtn" to="." method="_on_exit_wizard_close"]
[connection signal="pressed" from="ExitWizardDialog/WizardContent/VBox/ButtonSection/CreateBtn" to="." method="_on_exit_wizard_create"]
